--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "single page applications",
   "main": "index.js",
   "jest": {
-    "setupFilesAfterEnv": ["<rootDir>src/setupTests.js"],
-    "snapshotSerializers": ["enzyme-to-json/serializer"]
+    "setupFilesAfterEnv": [
+      "<rootDir>src/setupTests.js"
+    ],
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
   },
   "scripts": {
     "test": "jest --verbose",
@@ -53,6 +57,7 @@
     "webpack-dev-server": "^3.3.1"
   },
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
